--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,9 @@ body {
 .container {
   width: 100%;
   max-width: 600px;
+  min-height: 100vh;
   margin: 0 auto;
-  height: 100%;
   background-color: rgb(255, 255, 255);
+  position: relative;
 }
 
