--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   width: 100%;
   max-width: 600px;
-  padding: 40px 0 10px 0;
+  padding: 20px 0 10px 0;
   position: fixed;
   top: 0;
   left: 50%;
@@ -54,5 +54,15 @@
 
 .header__button_type_open-messages {
   background-image: url(../../images/buttons/send.png);
+}
 
+.header__logo-container {
+  width: 100px;
+}
+
+.header__logo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
